# self_calib

./: .gitignore  CMakeLists.txt  README.md
include/: calibrator.hpp
src/: main.cpp  selfcalibrator.cpp
src/planecalib/: BundleAdjuster.cpp  CalibratedBundleAdjuster.cpp  CameraModel.h  ImageDataSource.cpp  ImageDataSource.h  Keyframe.cpp  Keyframe.h  OpenCVDataSource.cpp  OpenCVDataSource.h  PlaneCalibHandler.cpp  PlaneCalibHandler.h  PlaneCalibSystem.cpp  PlaneCalibSystem.h  PnpEstimation.cpp  PoseTracker.cpp  SequenceDataSource.cpp  SequenceDataSource.h  flags.h
